--- a/ikuzo.user.css
+++ b/ikuzo.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Ikuzo
-@namespace      github.com/openstyles/stylus
+@namespace      https://github.com/OzakIOne/Ikuzo
 @version        1.0.0
 @description    An user style for TopAchat configurator called Ikuzo.
 @author         OzakI/OzakIOne
