--- a/ikuzo.user.css
+++ b/ikuzo.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Ikuzo
-@namespace      github.com/openstyles/stylus
+@namespace      github.com/ozakione/ikuzo
 @version        1.0.1
 @description    An user style for TopAchat configurator called Ikuzo.
 @author         OzakI/OzakIOne
